Fix placeholder styling and alignment

--- a/src/components/EditPostHeader.css
+++ b/src/components/EditPostHeader.css
@@ -1,5 +1,5 @@
 .edit.PostHeader input {
-  color: var(--white);
+or: var(--w  colhite);
   text-align: center;
   background: transparent;
   appearance: none;
@@ -9,12 +9,12 @@
   border: none
 }
 
-.edit.PostHeader .fa {
+.PostHeader.edit .fa {
   font-size: 1.25rem;
   margin-right: 0.5rem;
 }
 
-.edit.PostHeader .drophint {
+.PostHeader.edit .drophint {
   order: 1;
   background: var(--dark);
   border-radius: var(--br);
@@ -24,12 +24,29 @@
   color: var(--white)
 }
 
-.edit.PostHeader.Trip .drophint {
+.PostHeader.edit.Trip .drophint {
   order: 3;
   margin-bottom: 0;
   margin-top: auto;
 }
 
-.edit.PostHeader dates {
+.PostHeader.edit dates {
   margin-bottom: 1rem
+}
+
+.PostHeader.edit .public-DraftStyleDefault-ltr {
+  text-align: center;
+}
+
+.PostHeader.edit .public-DraftEditorPlaceholder-root {
+  text-align: center;
+  width: 100%;
+}
+
+.PostHeader.edit .H-Large {
+  width: 100%;
+}
+
+.PostHeader.edit .T-Large {
+  width: 100%;
 }
