--- a/src/components/EditTripHeader.css
+++ b/src/components/EditTripHeader.css
@@ -1,7 +1,16 @@
-.TripHeader.edit .T-large {
-  width: 100%
+.TripHeader.edit .public-DraftStyleDefault-ltr {
+  text-align: center;
 }
 
-.TripHeader.edit .public-DraftStyleDefault-ltr {
-  text-align: center
+.TripHeader.edit .public-DraftEditorPlaceholder-root {
+  text-align: center;
+  width: 100%;
+}
+
+.TripHeader.edit .H-Large {
+  width: 100%;
+}
+
+.TripHeader.edit .T-Large {
+  width: 100%;
 }
